# House48WithDjangoHtmx

./: README.md  djlint.toml  manage.py  pyproject.toml
.scripts/: DajngoRunServer.py  DajngoStartProject.py  DjangoStartApp.py
DjangoBackendApi/: apps.py  views.py
DjangoFrontendPages/: api.py  apps.py  views.py
DjangoFrontendPages/templates/: BasePage.html  HomePage.html  NewCount.html  NewOutput.html  OtherAddPage.html  OtherBasePage.html  OtherDetailsPage.html  OtherListPage.html  OtherPage.html  OtherPagesBase.html  TallBasePage.html  TallPage.html  TallPagesBase.html  TimeSection.html  base.html
DjangoFrontendPages/templates/cotton/: FooterBar.html  NavBar.html  NavBarButton.html  PropertyForSaleCard.html  SideBar.html  SidebarButton.html
DjangoWebsiteConfiguration/: .css  asgi.py  settings.py  urls.py  wsgi.py
src/house48withdjangohtmx/: __init__.py
