[project]
name = "house48withdjangohtmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TimothyAllman", email = "166746823+TimothyAllman@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datastar-py>=0.7.0",
    "django>=5.2.8",
    "django-cotton>=2.4.0",
    "django-extensions>=4.1",
    "djlint>=1.36.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
